--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
     <!-- New tweet CSS -->
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
+    <!-- All tweets CSS -->
+    <link rel="stylesheet" href="/styles/all-tweets.css" type="text/css" />
+
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -41,7 +44,7 @@
       </div>
     </nav>
 
-    <header>
+    <header class="main-header">
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
@@ -63,6 +66,30 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
+      </section>
+      <section id="all-tweets">
+        <article class="tweet">
+          <header>
+            <p>Header goes here</p>
+          </header>
+          <p>Tweet content goes here</p>
+          <footer>
+            <p>10 days ago</p>
+            <p>icons go here</p>
+          </footer>
+        </article>
+
+        <article class="tweet">
+          <header>
+            <p>Header goes here</p>
+          </header>
+          <p>Tweet content goes here</p>
+          <footer>
+            <p>10 days ago</p>
+            <p>icons go here</p>
+          </footer>
+        </article>
+
       </section>
     </main>
     
