--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+    <!-- Icons -->
+    <script src="https://kit.fontawesome.com/91be24cd0f.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -70,20 +73,26 @@
       <section id="all-tweets">
         <article class="tweet">
           <header>
-            <p>Header goes here</p>
+            <p>Newton</p>
+            <p>@SirIsaac</p>
           </header>
-          <p>Tweet content goes here</p>
+          <div class="tweet-feed">If I have seen further it is by standing on the shoulders of giants.</div>
           <footer>
             <p>10 days ago</p>
-            <p>icons go here</p>
+            <div class="icons">
+              <i class="fas fa-flag"></i>
+              <i class="fas fa-retweet"></i>
+              <i class="far fa-heart"></i>
+            </div>
           </footer>
         </article>
 
         <article class="tweet">
           <header>
-            <p>Header goes here</p>
+            <p>Username</p>
+            <p>@username</p>
           </header>
-          <p>Tweet content goes here</p>
+          <div class="tweet-feed">Tweet content goes here</div>
           <footer>
             <p>10 days ago</p>
             <p>icons go here</p>
