Implemented hover states

--- a/public/index.html
+++ b/public/index.html
@@ -71,10 +71,11 @@
         </form>
       </section>
       <section id="all-tweets">
+        
         <article class="tweet">
           <header>
             <p>Newton</p>
-            <p>@SirIsaac</p>
+            <p class="hidden-username">@SirIsaac</p>
           </header>
           <div class="tweet-feed">If I have seen further it is by standing on the shoulders of giants.</div>
           <footer>
@@ -90,12 +91,16 @@
         <article class="tweet">
           <header>
             <p>Username</p>
-            <p>@username</p>
+            <p class="hidden-username">@username</p>
           </header>
           <div class="tweet-feed">Tweet content goes here</div>
           <footer>
             <p>10 days ago</p>
-            <p>icons go here</p>
+            <div class="icons">
+              <i class="fas fa-flag"></i>
+              <i class="fas fa-retweet"></i>
+              <i class="far fa-heart"></i>
+            </div>
           </footer>
         </article>
 
