Added user icon in all tweets section

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,10 @@
 
         <article class="tweet">
           <header>
-            <p>Newton</p>
+            <div class="left-side">
+              <i class="fa fa-user-circle" aria-hidden="true"></i>
+              <span>Newton</span>
+            </div>
             <p class="hidden-username">@SirIsaac</p>
           </header>
           <div class="tweet-feed">If I have seen further it is by standing on the shoulders of giants.</div>
