--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,12 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
 
     <!-- Icons -->
     <script src="https://kit.fontawesome.com/91be24cd0f.js" crossorigin="anonymous"></script>
@@ -72,7 +74,7 @@
       </section>
       <section id="all-tweets">
 
-        <article class="tweet">
+        <!-- <article class="tweet">
           <header>
             <div class="left-side">
               <i class="fa fa-user-circle" aria-hidden="true"></i>
@@ -89,7 +91,7 @@
               <i class="far fa-heart"></i>
             </div>
           </footer>
-        </article>
+        </article> -->
 
       </section>
     </main>
