Added styling for error element

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,9 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
+        <div class="error">
+          <span id="error-text">Error</span>
+        </div>
         <h2>Compose Tweet</h2>
         <form method="POST" action="/tweets/">
           <label for="tweet-text">What are you humming about?</label>
