Used jQuery to hide/show error element

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
     <main class="container">
       <section class="new-tweet">
         <div class="error">
-          <span id="error-text">Error</span>
+          <span id="error-text"></span>
         </div>
         <h2>Compose Tweet</h2>
         <form method="POST" action="/tweets/">
