Added compose button to nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
 
       <div>
         <p><strong>Write</strong> a new tweet</p>
+        <button><i class="fas fa-angle-double-down"></i></button>
       </div>
     </nav>
 
