--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,9 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
-      <div>
+      <div class="nav-links">
         <p><strong>Write</strong> a new tweet</p>
-        <button><i class="fas fa-angle-double-down"></i></button>
+        <button class="compose" type="button"><i class="fas fa-angle-double-down"></i></button>
       </div>
     </nav>
 
@@ -65,7 +65,6 @@
         <div class="error">
           <span id="error-text"></span>
         </div>
-        <h3>Compose Tweet</h3>
         <form method="POST" action="/tweets/">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
