Added scroll to top button

--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@
       <section id="all-tweets">
 
       </section>
+      <button type="button" id="scroll-up"><i class="fas fa-angle-double-up"></i></button>
     </main>
     
   </body>
